--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.2
-requests==2.31.0
-python-docx==1.1.0
-python-pptx==0.6.23
-PyPDF2==4.0.0
+Flask
+requests
+python-docx
+python-pptx
+PyPDF2
