--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-groq_api_key="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"
+GROQ_API_KEY="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"
