--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GROQ_API_KEY="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"
+api_key="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"
+
