--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-api_key="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"
+GROQ_API_KEY="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"
 
